<resources>
    <string name="app_name">SampleToDo</string>

    <string name="list_todo_text_due_date">Due Date: </string>
    <string name="list_todo_text_reminder">Reminder: </string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_delete">Delete</string>

    <string name="dialog_todo_detail_title">Edit</string>
    <string name="dialog_todo_item_title">Title</string>
    <string name="dialog_todo_item_description">Description</string>
    <string name="dialog_todo_item_due_date">Due Date</string>
    <string name="dialog_todo_item_due_date_format">%1$02d/%2$02d/%3$02d</string>
    <string name="dialog_todo_item_due_date_time_format">%1$02d:%2$02d</string>
    <string name="dialog_todo_item_reminder">Reminder</string>
    <string name="dialog_todo_item_set_time">Set</string>

    <string name="dialog_todo_delete_title">Delete</string>
    <string name="dialog_todo_delete_message">Are you sure to delete the item %1$s ?</string>

    <string name="dialog_todo_item_reminder_on_time">on time</string>
    <string name="dialog_todo_item_reminder_5min">5 min</string>
    <string name="dialog_todo_item_reminder_15min">15 min</string>
    <string name="dialog_todo_item_reminder_30min">30 min</string>
    <string name="dialog_todo_item_reminder_1hour">1 hour</string>
    <string name="dialog_todo_item_reminder_2hour">2 hours</string>
    <string name="dialog_todo_item_reminder_4hour">4 hours</string>
    <string name="dialog_todo_item_reminder_8hour">8 hours</string>
    <string name="dialog_todo_item_reminder_12hour">12 hours</string>
    <string name="dialog_todo_item_reminder_1day">1 day</string>
    <string name="dialog_todo_item_reminder_1week">1 week</string>

    <string name="notification_channel_reminder">reminder</string>

    <string name="app_bar_action_add_todo">Add ToDo</string>
    <string name="app_bar_action_sort_todo">Sort by due date</string>
</resources>
